# NativeConsoleChat

./: .gitignore  CMakeLists.txt  Makefile  README.md  compatinet.h  messages.h  server.c
client/: client.c  errormanagement.h  globalvars.h  recieverthread.c  recieverthread.h  senderthread.c  senderthread.h  ui.c  ui.h  unrecievedqueue.c  unrecievedqueue.h  unsentqueue.c  unsentqueue.h
